[package]
name = "particles"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
description = "Particles effects on the WebAssembly platform"
license = "MIT"
repository = "https://github.com/losfair/particles-rs"

[lib]
name = "particles"
crate-type = ["cdylib"]

[features]
default = ["particles-api", "glue-api"]
particles-api = []
glue-api = []

[profile.release]
lto = true

[dependencies]

[dependencies.rand]
version = "0.4"
default-features = false
